--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 asgiref==3.5.0
+certifi==2021.10.8
+charset-normalizer==2.0.11
 Django==4.0.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.0.0
+idna==3.3
 psycopg2==2.9.3
 psycopg2-binary==2.9.3
 PyJWT==2.3.0
 pytz==2021.3
+requests==2.27.1
 sqlparse==0.4.2
+urllib3==1.26.8
