--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.0
 certifi==2021.10.8
 charset-normalizer==2.0.11
 Django==4.0.1
+django-filter==21.1
 django-pymemcache==1.0.0
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.0.0
